--- a/src/app/componets/login-page/login-page.component.html
+++ b/src/app/componets/login-page/login-page.component.html
@@ -10,7 +10,7 @@
                     <div class="input-group">
                         <div class="input-group-prepend">
                           <span class="input-group-text" style="background-color: white;">
-                            <i class="fas fa-user"></i>
+                            <fa-icon [icon]="faUser" style="color: blue;"></fa-icon>
                           </span>
                         </div>
                         <input type="text" class="form-control" id="username" 
