--- a/src/app/componets/doctor-profile-page/doctor-profile-page.component.html
+++ b/src/app/componets/doctor-profile-page/doctor-profile-page.component.html
@@ -1,6 +1,16 @@
 <app-navbar [SearchBar]="true"></app-navbar>
-<div class="d-flex h-100">
-    <div class="d-flex h-100 w-25 sidebar">
-
+<div class="d-flex custom-container">
+    <div class="d-flex flex-column align-items-center h-100 py-3 px-3 sidebar">
+        <img src="../../../assets/images/defaultImage.png" width="150px" height="150px">
+        <div class="d-flex flex-column align-items-start" style="width: 150px;">
+            <p class="mt-2"><span class="font-weight-bold">Name: </span>Nombre</p>
+            <p class="mt-2"><span class="font-weight-bold">Age: </span>Edad</p>
+            <p class="mt-2"><span class="font-weight-bold">Speciality: </span>especialidad</p>
+            <p class="mt-2"><span class="font-weight-bold">Sub-Speciality: </span>Sub-especialidad</p>
+        </div>
+    </div>
+    <div class="d-flex px-5 py-5 content">
+        <app-create-doctor-form style="width: 100%;"></app-create-doctor-form>
+        <!-- <app-create-patient-form style="width: 100%;"></app-create-patient-form> -->
     </div>
 </div>
