--- a/src/app/componets/patient-profile-page/patient-profile-page.component.css
+++ b/src/app/componets/patient-profile-page/patient-profile-page.component.css
@@ -1,4 +1,39 @@
+.custom-container{
+    min-height: calc(100% - 54px);
+}
+
 .sidebar{
     background-color: #BBDEFB;
     box-shadow: 0 0 15px rgba(10, 10, 10, 0.3);
+    position: fixed;
+    width: 300px;
+}
+
+.content{
+    margin-left: 300px;
+    width: calc(100% - 300px);
+}
+
+/* .mat-row:nth-child(even){
+    background-color: red;
+}
+        
+.mat-row:nth-child(odd){
+    background-color: black;
+} */
+
+.mat-row:nth-child(even){
+    background-color: red;
+}
+        
+.mat-row:nth-child(odd){
+    background-color: blue;
+}
+
+.mat-header-row{
+    background-color: coral;
+}
+
+.mat-header-cell{
+    color: black;
 }
