--- a/src/app/componets/patient-profile-page/patient-profile-page.component.html
+++ b/src/app/componets/patient-profile-page/patient-profile-page.component.html
@@ -1,6 +1,53 @@
 <app-navbar [SearchBar]="false"></app-navbar>
-<div class="d-flex h-100">
-    <div class="d-flex h-100 w-25 sidebar">
+<div class="d-flex custom-container">
+    <div class="d-flex flex-column align-items-center h-100 py-3 px-3 sidebar">
+        <img src="../../../assets/images/defaultImage.png" width="150px" height="150px">
+        <div class="d-flex flex-column align-items-start" style="width: 150px;">
+            <p class="mt-2"><span class="font-weight-bold">Name: </span>Nombre</p>
+            <p class="mt-2"><span class="font-weight-bold">Age: </span>Edad</p>
+        </div>
+    </div>
+    <div class="d-flex flex-column align-items-center px-5 py-5 content">
 
+        <input type="text" class="form-control mx-auto w-50" (keyup)="applyFilter($event)" 
+            placeholder="Ex. ium" #input 
+            style="border-radius: 50px;">
+
+        <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 mt-4 w-75">
+
+            <!-- Position Column -->
+            <ng-container matColumnDef="position">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> No. </th>
+                <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+            </ng-container>
+            
+            <!-- Name Column -->
+            <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+                <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+            </ng-container>
+            
+            <!-- Weight Column -->
+            <ng-container matColumnDef="weight">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Weight </th>
+                <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+            </ng-container>
+            
+            <!-- Symbol Column -->
+            <ng-container matColumnDef="symbol">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Symbol </th>
+                <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+            </ng-container>
+            
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            
+            <!-- Row shown when there is no matching data. -->
+            <tr class="mat-row" *matNoDataRow>
+                <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+            </tr>
+
+        </table>
+        <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons class="w-75"></mat-paginator>
     </div>
 </div>
