--- a/src/app/componets/home-page/home-page.component.html
+++ b/src/app/componets/home-page/home-page.component.html
@@ -4,8 +4,7 @@
             MedicalAssistant
         </a>
         <div class = "navbar-nav ml-auto">
-            <a class="nav-link navbar-link mx-1" style="color: white;" 
-            [routerLink]="['/Login']">
+            <a class="nav-link navbar-link mx-1" [routerLink]="['/Login']">
                 Sing In
             </a>
         </div> 
