--- a/src/app/componets/login-page/login-page.component.html
+++ b/src/app/componets/login-page/login-page.component.html
@@ -10,7 +10,7 @@
                     <div class="input-group">
                         <div class="input-group-prepend">
                           <span class="input-group-text" style="background-color: white;">
-                            <fa-icon [icon]="faUser" style="color: blue;"></fa-icon>
+                            <fa-icon [icon]="faUser"></fa-icon>
                           </span>
                         </div>
                         <input type="text" class="form-control" id="username" 
@@ -22,7 +22,7 @@
                     <div class="input-group">
                         <div class="input-group-prepend">
                           <span class="input-group-text" style="background-color: white;">
-                            <i class="fas fa-american-sign-language-interpreting"></i>
+                            <fa-icon [icon]="faLock"></fa-icon>
                           </span>
                         </div>
                         <input type="password" class="form-control" id="password" 
