--- a/src/app/componets/patient-profile-page/patient-profile-page.component.css
+++ b/src/app/componets/patient-profile-page/patient-profile-page.component.css
@@ -3,7 +3,7 @@
 }
 
 .sidebar{
-    background-color: #BBDEFB;
+    background-color: #64B5F6;
     box-shadow: 0 0 15px rgba(10, 10, 10, 0.3);
     position: fixed;
     width: 300px;
@@ -12,28 +12,4 @@
 .content{
     margin-left: 300px;
     width: calc(100% - 300px);
-}
-
-/* .mat-row:nth-child(even){
-    background-color: red;
-}
-        
-.mat-row:nth-child(odd){
-    background-color: black;
-} */
-
-.mat-row:nth-child(even){
-    background-color: red;
-}
-        
-.mat-row:nth-child(odd){
-    background-color: blue;
-}
-
-.mat-header-row{
-    background-color: coral;
-}
-
-.mat-header-cell{
-    color: black;
 }
