--- a/src/app/componets/create-patient-form/create-patient-form.component.html
+++ b/src/app/componets/create-patient-form/create-patient-form.component.html
@@ -1,6 +1,6 @@
 <h1>Create Patient User</h1>
 
-<form class="col-md-12" (ngSubmit)="OnSubmit()" [formGroup]="patientFrom">
+<form class="col-md-12" (ngSubmit)="OnSubmit()" [formGroup]="form">
     <div class="form-row">
         <div class="form-group col-md text-center">
             <img src="../../../assets/images/defaultImage.png" width="70%">
@@ -10,12 +10,30 @@
                 <div class="form-group col-12">
                     <label >First Name</label>
                     <input type="text" class="form-control" id="firstName" formControlName = "firstName">
+                    <div *ngIf="form.get('firstName')?.dirty || form.get('firstName')?.touched
+                     || submited" 
+                     class="w-100 justify-content-center text-center error">
+                    
+                        <div *ngIf="form.get('firstName')?.errors?.required">
+                            Fist name is required
+                        </div>
+
+                    </div>
                 </div>
             </div>
             <div class="form-row">
                 <div class="form-group col-12">
                     <label >Last Name</label>
                     <input type="text" class="form-control" id="lastName" formControlName = "lastName">
+                    <div *ngIf="form.get('lastName')?.dirty || form.get('lastName')?.touched
+                     || submited" 
+                     class="w-100 justify-content-center text-center error">
+                     
+                        <div *ngIf="form.get('lastName')?.errors?.required">
+                            Last name is required
+                        </div>
+
+                    </div>
                 </div>
             </div>
         </div>
@@ -32,13 +50,30 @@
                     class="form-check-input" formControlName = "sex">
                     <label class="form-check-label" for="sex2">Femenino</label>
                 </div>
+                <div class="w-100 justify-content-center text-center error mt-2">
+                    
+                    <div *ngIf="form.get('sex')?.errors?.required">
+                        Sex is required
+                    </div>
+
+                </div>
             </div>
         </div>
     </div>
     <div class="form-row">
         <div class="form-group col-md">
             <label>BirthDate</label>
-            <input type="date" class="form-control" id="birthDate" formControlName = "birthDate">
+            <input type="date" class="form-control" id="birthDate" formControlName = "birthDate" 
+            (change)="OnDateChange()">
+            <div *ngIf="form.get('birthDate')?.dirty || form.get('birthDate')?.touched
+             || submited" 
+                class="w-100 justify-content-center text-center error">
+                    
+                <div *ngIf="form.get('birthDate')?.errors?.required">
+                    Birthdate is required
+                </div>
+
+            </div>
         </div>
         <div class="form-group col-md">
             <label>ID</label>
@@ -60,6 +95,74 @@
     <div class="form-group row col-md mx-0 px-0">
         <label class="col-md-2 col-form-label pl-0">Disease(s)</label>
         <input type="text" class="form-control col-md-10" id="diseases" formControlName = "disease">
+    </div>
+
+    <div class="form-row">
+        <div class="form-group col-md">
+            <label>User Name</label>
+            <input type="text" class="form-control" id="userName" formControlName = "userName">
+            <div *ngIf="form.get('userName')?.dirty || form.get('userName')?.touched
+             || submited" 
+                class="w-100 justify-content-center text-center error">
+                    
+                <div *ngIf="form.get('userName')?.errors?.required">
+                    Username is required
+                </div>
+
+            </div>
+        </div>
+        <div class="form-group col-md">
+            <label>Email</label>
+            <input type="email" class="form-control" id="email" formControlName = "email">
+            <div *ngIf="form.get('email')?.dirty || form.get('email')?.touched
+             || submited" 
+                class="w-100 justify-content-center text-center error">
+                    
+                <div *ngIf="form.get('email')?.errors?.required">
+                    Email is required
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="form-row">
+        <div class="form-group col-md">
+            <label>Password</label>
+            <input type="password" class="form-control" id="password" formControlName = "password">
+            <div *ngIf="form.get('password')?.dirty || form.get('password')?.touched
+             || submited" 
+                class="w-100 justify-content-center text-center error">
+                    
+                <div *ngIf="form.get('password')?.errors?.required">
+                    Password is required
+                </div>
+
+                <div *ngIf="form.errors?.EqualPassword && 
+                (form.get('confirmPassword')?.dirty || form.get('confirmPassword')?.touched) ">
+                    passwords must be the same 
+                </div>
+
+            </div>
+        </div>
+        <div class="form-group col-md">
+            <label>Confirm Password</label>
+            <input type="password" class="form-control" id="confirmPassword" formControlName = "confirmPassword">
+            <div *ngIf="form.get('confirmPassword')?.dirty || form.get('confirmPassword')?.touched
+             || submited" 
+                class="w-100 justify-content-center text-center error">
+                    
+                <div *ngIf="form.get('confirmPassword')?.errors?.required">
+                    Confirm Password is required
+                </div>
+
+                <div *ngIf="form.errors?.EqualPassword && 
+                (form.get('password')?.dirty || form.get('password')?.touched) ">
+                    passwords must be the same 
+                </div>
+
+            </div>
+        </div>
     </div>
 
     <div class="form-row mb-4 justify-content-end">
