--- a/src/app/componets/doctor-profile-page/doctor-profile-page.component.html
+++ b/src/app/componets/doctor-profile-page/doctor-profile-page.component.html
@@ -9,8 +9,65 @@
             <p class="mt-2"><span class="font-weight-bold">Sub-Speciality: </span>Sub-especialidad</p>
         </div>
     </div>
-    <div class="d-flex px-5 py-5 content">
-        <app-create-doctor-form style="width: 100%;"></app-create-doctor-form>
-        <!-- <app-create-patient-form style="width: 100%;"></app-create-patient-form> -->
+    <div class="d-flex flex-column align-items-center px-5 py-5 content">
+
+        <input type="text" class="form-control mx-auto w-50" (keyup)="applyFilter($event)" 
+            placeholder="Ex. ium" #input 
+            style="border-radius: 50px;">
+
+        <div class="d-flex flex-column mt-5" style="width: 90%;">
+            <div class="d-flex align-self-end mb-0 add-btn">
+                <fa-icon [icon]="faPlus" class="mx-2"></fa-icon>
+                <p>Add consultation</p>
+            </div>
+            <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 w-100 mt-0">
+    
+                <!-- Id Column -->
+                <ng-container matColumnDef="id">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> No. </th>
+                    <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+                </ng-container>
+                
+                <!-- Title Column -->
+                <ng-container matColumnDef="title">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Title </th>
+                    <td mat-cell *matCellDef="let element"> {{element.title}} </td>
+                </ng-container>
+                
+                <!-- Description Column -->
+                <ng-container matColumnDef="description">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
+                    <td mat-cell *matCellDef="let element" class="w-25"> {{element.description}} </td>
+                </ng-container>
+                
+                <!-- Patient Column -->
+                <ng-container matColumnDef="related">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Patient </th>
+                    <td mat-cell *matCellDef="let element"> {{element.related}} </td>
+                </ng-container>
+
+                <!-- archiveLink Column -->
+                <ng-container matColumnDef="archiveLink">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Archive </th>
+                    <td mat-cell *matCellDef="let element"> {{element.archiveLink}} </td>
+                </ng-container>
+
+                <!-- Date Column -->
+                <ng-container matColumnDef="date">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Date </th>
+                    <td mat-cell *matCellDef="let element"> {{element.date.toLocaleDateString("en-US")}} </td>
+                </ng-container>
+                
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                
+                <!-- Row shown when there is no matching data. -->
+                <tr class="mat-row" *matNoDataRow>
+                    <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+                </tr>
+    
+            </table>
+            <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons class="w-100"></mat-paginator>
+        </div>    
     </div>
 </div>
