--- a/src/app/componets/home-page/home-page.component.css
+++ b/src/app/componets/home-page/home-page.component.css
@@ -5,11 +5,9 @@
 
 .navbar-link,
 .navbar-toggler-icon{
-    color: white;
+    color: white !important;
     font-size: 20px;
-    /* font-weight: bold; */
     transition: all 0.3s;
-    /* cursor: pointer; */
 }
 
 .navbar-link:hover{
