--- a/src/app/componets/secretary-profile-page/secretary-profile-page.component.html
+++ b/src/app/componets/secretary-profile-page/secretary-profile-page.component.html
@@ -1,1 +1,13 @@
-<p>secretary-profile-page works!</p>
+<app-navbar [SearchBar]="true"></app-navbar>
+<div class="d-flex custom-container">
+    <div class="d-flex flex-column align-items-center h-100 py-3 px-3 sidebar">
+        <img src="../../../assets/images/defaultImage.png" width="150px" height="150px">
+        <div class="d-flex flex-column align-items-start" style="width: 150px;">
+            <p class="mt-2"><span class="font-weight-bold">Name: </span>Nombre</p>
+            <p class="mt-2"><span class="font-weight-bold">Age: </span>Edad</p>
+        </div>
+    </div>
+    <div class="d-flex px-5 py-5 content">
+        <app-create-patient-form style="width: 100%;"></app-create-patient-form>
+    </div>
+</div>
