--- a/src/app/componets/admin-profile-page/admin-profile-page.component.css
+++ b/src/app/componets/admin-profile-page/admin-profile-page.component.css
@@ -14,15 +14,12 @@
     width: calc(100% - 300px);
 }
 
-.custom-btn{
-    cursor: pointer;
+.custom-link{
     text-decoration: none;
     color: black;
-    font-size: medium;
-    font-weight: bold;
-    transition: all 0.5s;
+    /* transition: all 0.3s; */
 }
 
-.custom-btn:hover{
-    transform: scale(1.1);
-}
+/* .custom-link:hover{
+    transform: scale(1.05);
+} */
