--- a/src/app/componets/admin-profile-page/admin-profile-page.component.html
+++ b/src/app/componets/admin-profile-page/admin-profile-page.component.html
@@ -7,15 +7,31 @@
             <p class="mt-2"><span class="font-weight-bold">Age: </span>Edad</p>
         </div>
     </div>
-    <div class="d-flex flex-column px-5 py-5 content">
+    <div class="d-flex flex-column align-items-center px-5 py-5 content">
         <div class="d-flex mb-4">
-            <a class="mx-2 custom-btn" (click)="onFormChange('Patient')">Create Patient</a>
-            <a class="mx-2 custom-btn" (click)="onFormChange('Doctor')">Create Doctor</a>
-            <a class="mx-2 custom-btn" >Create Secretary</a>
+            <a class="custom-link" [routerLink]="['/AdminProfile/CreatePatient']">
+                <div class="d-flex mx-2">
+                    <fa-icon [icon]="faUserMd" class="mx-2"></fa-icon>
+                    <p>Create Patient</p>
+                </div>
+            </a>
+            <a class="custom-link" [routerLink]="['/AdminProfile/CreateDoctor']">
+                <div class="d-flex mx-2">
+                    <fa-icon [icon]="faUserInjured" class="mx-2"></fa-icon>
+                    <p>Create Doctor</p>
+                </div>
+            </a>
+            <a>
+                <div class="d-flex custom-btn mx-2">
+                    <fa-icon [icon]="faUserTie" class="mx-2"></fa-icon>
+                    <p>Create Secretary</p>
+                </div>
+            </a>
         </div>
-        <div style="width: 100%;" [ngSwitch]="form">
-            <app-create-doctor-form *ngSwitchCase="'Doctor'" style="width: 100%;"></app-create-doctor-form>
-            <app-create-patient-form *ngSwitchCase="'Patient'" style="width: 100%;"></app-create-patient-form>
-       </div>
+        
+        <div style="width: 100%;">
+            <router-outlet></router-outlet>
+        </div>
+
     </div>
 </div>
