--- a/src/app/componets/doctor-profile-page/doctor-profile-page.component.css
+++ b/src/app/componets/doctor-profile-page/doctor-profile-page.component.css
@@ -14,22 +14,7 @@
     width: calc(100% - 300px);
 }
 
-.add-btn{
-    cursor: pointer;
-}
-
-/* .mat-row:nth-child(even){
-    background-color: red;
-}
-        
-.mat-row:nth-child(odd){
-    background-color: blue;
-} */
-
-.mat-header-row{
-    background-color: coral;
-}
-
-.mat-header-cell{
+.custom-link{
+    text-decoration: none;
     color: black;
 }
