--- a/src/app/componets/home-page/home-page.component.css
+++ b/src/app/componets/home-page/home-page.component.css
@@ -1,6 +1,32 @@
+@font-face{
+    font-family: "Lobster Regular";
+    src: url("../../../assets/fonts/Lobster-Regular.ttf");
+}
+
+@font-face{
+    font-family: "Roboto Regular";
+    src: url("../../../assets/fonts/RobotoSlab-Regular.ttf");
+}
+
+.lobster-font{
+    font-family: "Lobster Regular";
+    color: white;
+    font-size: 25px;
+}
+
+.lobster-font:hover{
+    color: white;
+}
+
+.roboto-font{
+    font-family: "Roboto Regular";
+}
+
 .navbar-custom{
     background-color: #2196F3;
     box-shadow: 0 0 15px rgba(10, 10, 10, 0.3);
+    min-height: 54px;
+
 }
 
 .navbar-link,
@@ -12,4 +38,80 @@
 
 .navbar-link:hover{
     transform: scale(1.1);
+}
+
+.margin{
+    margin-top: 54px;
+}
+
+.background{
+    background-image:  url("../../../assets/images/home.jpg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    height: calc(100vh + 50px);
+    position: relative;
+}
+
+.overlay {
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+.title{
+    font-size: 8vw;
+    line-height: 8vw;
+    color: white;
+}
+
+.sub-title{
+    color: white;
+    font-size: 2vw;
+    line-height: 2vw;
+}
+
+.ligth-text{
+    color: white;
+}
+
+.page-section {
+    padding: 6rem 0;
+}
+
+.team-member {
+    margin-bottom: 3rem;
+    text-align: center;
+}
+
+.team-member img {
+    width: 14rem;
+    height: 14rem;
+    /* border: 0.5rem solid rgba(0, 0, 0, 0.1); */
+    box-shadow: 0 5px 5px 0 #adb5bd;
+}
+
+.divider{
+    max-width: 3.25rem;
+    border-width: 0.2rem;
+    border-color: white;
+}
+
+.white-icon{
+    color: white;
+}
+
+.blue-icon{
+    color: #2196F3;
+}
+
+.contact-us{
+    background-color: #64B5F6;
+}
+
+.contact-us-icons{
+    font-size: 50px;
+}
+
+.footer{
+    background-color: #2196F3;
 }
