--- a/src/app/componets/login-page/login-page.component.html
+++ b/src/app/componets/login-page/login-page.component.html
@@ -1,48 +1,60 @@
-<div class="d-flex flex-column justify-content-center align-items-center w-100 h-100">
-    <h1>Sign In</h1>
-    <div class="d-flex w-75 h-75 login-box">
-        <div class="d-flex flex-column justify-content-center align-items-center h-100 w-50">
-            <h1>Hello!</h1>
-            <h3>Sing into your account</h3>
+<div class="d-flex flex-column justify-content-center align-items-center w-100 h-100 background" 
+    style="min-height: 500px;">
+    <h1 class="font-weight-bolder mb-5 mt-2 sign-text">Sign In <span class="font-weight-normal">from</span></h1>
+    <div class="d-flex w-75 login-box">
+        <div class="d-flex flex-column justify-content-center align-items-center p-5 h-100 w-50"
+            style="background-color: white;">
+            <h1 class="font-weight-bolder m-0">Hello!</h1>
+            <h3 class="m-0">Sing into your account</h3>
 
-            <form  class="w-50" (ngSubmit)="OnLogin()">
+            <form  class="w-75" (ngSubmit)="OnLogin()" [formGroup]="form">
                 <div class = "form-row mt-3">
-                    <div class="input-group">
-                        <div class="input-group-prepend">
-                          <span class="input-group-text" style="background-color: white;">
-                            <fa-icon [icon]="faUser"></fa-icon>
-                          </span>
+                    <div *ngIf="form.get('userName')?.dirty || form.get('userName')?.touched
+                    || submited" 
+                        class="w-100 justify-content-center text-center error">
+                            
+                        <div *ngIf="form.get('userName')?.errors?.required">
+                            Username is required
                         </div>
-                        <input type="text" class="form-control" id="username" 
-                        placeholder="username">
+
                     </div>
+                    <mat-form-field appearance="outline" class="w-100">
+                        <mat-label>Username</mat-label>
+                        <input matInput id="userName" formControlName = "userName">
+                        <mat-icon matPrefix>account_circle</mat-icon>
+                    </mat-form-field>
                 </div>
 
-                <div class = "form-row mt-3">
-                    <div class="input-group">
-                        <div class="input-group-prepend">
-                          <span class="input-group-text" style="background-color: white;">
-                            <fa-icon [icon]="faLock"></fa-icon>
-                          </span>
+                <div class = "form-row">
+                    <div *ngIf="form.get('password')?.dirty || form.get('password')?.touched
+                    || submited" 
+                        class="w-100 justify-content-center text-center error">
+                            
+                        <div *ngIf="form.get('password')?.errors?.required">
+                            Password is required
                         </div>
-                        <input type="password" class="form-control" id="password" 
-                        placeholder="password">
+
                     </div>
+                    <mat-form-field appearance="outline" class="w-100 ">
+                        <mat-label>Password</mat-label>
+                        <input matInput type="password" id="password" formControlName = "password">
+                        <mat-icon matPrefix>lock</mat-icon>
+                    </mat-form-field>
                 </div>
 
                 <div class = "form-row mt-3 justify-content-center">
                     <button type="submit" class="btn btn-primary">
-                        Sign In
+                        Sign In 
                     </button>
                 </div>
             </form>
         </div>
         <div class="d-flex flex-column justify-content-center align-items-center h-100 w-50" 
         style="background-color: #2196F3; padding: 20px;">
-            <h1>
+            <h1 class="title roboto-font">
                 MedicalAssistant
             </h1>
-            <p style="text-align: center;">
+            <p class="ligth-text text-center roboto-font">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc varius vestibulum vulputate. 
                 Sed enim lacus, mattis nec aliquam non, cursus vel leo. Vestibulum sit amet turpis tempor, 
                 auctor odio iaculis, blandit nisl. Fusce ut facilisis erat, vitae tincidunt nulla. 
