--- a/src/app/componets/navbar/navbar.component.css
+++ b/src/app/componets/navbar/navbar.component.css
@@ -1,6 +1,24 @@
+@font-face{
+    font-family: "Lobster Regular";
+    src: url("../../../assets/fonts/Lobster-Regular.ttf");
+}
+
+.lobster-font{
+    font-family: "Lobster Regular";
+    color: white;
+    font-size: 25px;
+}
+
+.lobster-font:hover{
+    color: white;
+}
+
+
+
 .navbar-custom{
     background-color: #2196F3;
     box-shadow: 0 0 15px rgba(10, 10, 10, 0.3);
+    min-height: 54px;
 }
 
 .navbar-link,
@@ -17,6 +35,10 @@
 .navbar-link:hover,
 .logout-icon:hover{
     transform: scale(1.1);
+}
+
+.margin{
+    margin-top: 54px;
 }
 
 
