--- a/src/app/componets/create-doctor-form/create-doctor-form.component.html
+++ b/src/app/componets/create-doctor-form/create-doctor-form.component.html
@@ -93,15 +93,25 @@
         </div>
     </div>
 
-    <div class="form-group row col-md mx-0 px-0">
-        <label class="col-md-2 col-form-label pl-0">Speciality(s)</label>
-        <input type="text" class="form-control col-md-10" id="speciality" formControlName = "speciality">
-        
-    </div>
+    <div class="form-row">
+        <div class="form-group col-md">
+            <label>Speciality(s)</label>
+            <select #speciality class="custom-select" (change)="onChange()"
+                    formControlName ="speciality">
+                <option value="" selected disabled>Provincias</option>
+                <option *ngFor="let item of specialities" [ngValue]="item.id">{{item.value}}</option>
+            </select>
+        </div>
 
-    <div class="form-group row col-md mx-0 px-0">
-        <label class="col-md-2 col-form-label pl-0">Sub-Speciality(s)</label>
-        <input type="text" class="form-control col-md-10" id="subSpeciality" formControlName = "subSpeciality">
+        <div class="form-group col-md">
+            <label>Sub-Speciality(s)</label>
+            <select #subSpeciality class=" custom-select"
+                    formControlName ="subSpeciality">
+                <option value="" selected disabled>Provincias</option>
+                <option *ngFor="let item of subSpecialities" [ngValue]="item.id">{{item.value}}</option>
+            </select>
+        </div>
+        
     </div>
 
     <div class="form-row">
