--- a/src/app/componets/add-consultation-form/add-consultation-form.component.html
+++ b/src/app/componets/add-consultation-form/add-consultation-form.component.html
@@ -28,7 +28,7 @@
         </div>
     </div>
     <div class="form-group col-md mx-0 px-0">
-        <label class="col-md col-form-label pl-0">Patient</label>
+        <label class="col-md col-form-label pl-0">Patient (Id)</label>
         <input type="text" class="form-control" id="patient" formControlName = "patient">
         <div *ngIf="form.get('patient')?.dirty || form.get('patient')?.touched
         || submited" 
