--- a/src/app/componets/consultation-table/consultation-table.component.html
+++ b/src/app/componets/consultation-table/consultation-table.component.html
@@ -9,34 +9,34 @@
         <!-- Id Column -->
         <ng-container matColumnDef="id">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> No. </th>
-            <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+            <td mat-cell *matCellDef="let element" style="width: 15%;"> {{element.id}} </td>
         </ng-container>
         
         <!-- Title Column -->
         <ng-container matColumnDef="title">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Title </th>
-            <td mat-cell *matCellDef="let element"> {{element.title}} </td>
+            <td mat-cell *matCellDef="let element" style="width: 15%;"> {{element.title}} </td>
         </ng-container>
         
         <!-- Description Column -->
         <ng-container matColumnDef="description">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
-            <td mat-cell *matCellDef="let element" class="w-25"> {{element.description}} </td>
+            <td mat-cell *matCellDef="let element" style="width: 25%;"> {{element.description}} </td>
         </ng-container>
         
         <!-- Patient Column -->
         <ng-container matColumnDef="related">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> {{related}} </th>
-            <td mat-cell *matCellDef="let element"> {{element.related}} </td>
+            <td mat-cell *matCellDef="let element" style="width: 10%;"> {{element.related}} </td>
         </ng-container>
 
         <!-- archiveLink Column -->
         <ng-container matColumnDef="archiveLink">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Archive </th>
-            <td mat-cell *matCellDef="let element">
-                <a href="https://www.google.com/" target="_blank">
+            <td mat-cell *matCellDef="let element" style="width: 25%;">
+                <a href="{{element.archiveLink}}" target="_blank">
                     <fa-icon [icon]="faFilePdf"></fa-icon>
-                    {{element.archiveLink}}.pdf
+                    Archivo.pdf
                 </a>
             </td>
         </ng-container>
@@ -44,7 +44,7 @@
         <!-- Date Column -->
         <ng-container matColumnDef="date">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Date </th>
-            <td mat-cell *matCellDef="let element"> {{element.date.toLocaleDateString("en-US")}} </td>
+            <td mat-cell *matCellDef="let element" style="width: 10%;"> {{element.date.toLocaleDateString("en-US")}} </td>
         </ng-container>
         
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
