--- a/src/app/componets/admin-profile-page/admin-profile-page.component.html
+++ b/src/app/componets/admin-profile-page/admin-profile-page.component.html
@@ -3,8 +3,8 @@
     <div class="d-flex flex-column align-items-center h-100 py-3 px-3 sidebar">
         <img src="../../../assets/images/defaultImage.png" width="150px" height="150px">
         <div class="d-flex flex-column align-items-start" style="width: 150px;">
-            <p class="mt-2"><span class="font-weight-bold">Name: </span>Nombre</p>
-            <p class="mt-2"><span class="font-weight-bold">Age: </span>Edad</p>
+            <p class="mt-2"><span class="font-weight-bold">Name: </span>Frank Cahvez</p>
+            <p class="mt-2"><span class="font-weight-bold">Birthdate: </span>2000-11-03</p>
         </div>
     </div>
     <div class="d-flex flex-column align-items-center px-5 py-5 content">
