--- a/src/app/componets/add-consultation-form/add-consultation-form.component.html
+++ b/src/app/componets/add-consultation-form/add-consultation-form.component.html
@@ -29,7 +29,15 @@
     </div>
     <div class="form-group col-md mx-0 px-0">
         <label class="col-md col-form-label pl-0">Patient (Id)</label>
-        <input type="text" class="form-control" id="patient" formControlName = "patient">
+        <input type="text" class="form-control" id="patient" formControlName = "patient"
+        (keyup) = "onKeypress($event)"
+        [(ngModel)]="patient" (ngModelChange)="setUserId()"
+        [matAutocomplete]="auto">
+        <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
+            <mat-option *ngFor="let patient of filteredPatients | async" [value]="patient">
+              {{patient.usuario}}
+            </mat-option>
+          </mat-autocomplete>
         <div *ngIf="form.get('patient')?.dirty || form.get('patient')?.touched
         || submited" 
             class="w-100 justify-content-center text-center error">
